--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,20 @@
 /node_modules
 /build
 
+# Dependencies
+node_modules/
+dist/
+
+# Environment
+.env
+.env.*
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
 # Logs
 logs
 *.log
@@ -18,6 +32,9 @@ lerna-debug.log*
 # Tests
 /coverage
 /.nyc_output
+
+# Docker
+docker-compose.override.yml
 
 # IDEs and editors
 /.idea
@@ -54,3 +71,5 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+/prisma/migrations/
